link scripts file

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,5 +91,26 @@ header {
 				}
 			}
 		}
+		.mobile-toggle {
+			display: none;
+			color: var(--base-800);
+			padding: 10px;
+			@media (max-width: 768px) {
+				display: inline-block;
+				position: absolute;
+				top: 20px;
+				right: 20px;
+			}
+		}
+	}
+	@media (max-width: 768px) {
+		nav {
+			ul {
+				display: none;
+				&.active {
+					display: flex;
+				}
+			}
+		}
 	}
 }
