--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ header {
 	nav {
 		display: flex;
 		align-items: center;
+		justify-content: center;
 		ul {
 			display: flex;
 			list-style-type: none;
@@ -103,12 +104,27 @@ header {
 			}
 		}
 	}
+	@media (max-width: 1024px) {
+		flex-direction: column;
+		align-items: center;
+	}
+
 	@media (max-width: 768px) {
+		flex-direction: column;
+		align-items: center;
 		nav {
+			margin: 10px;
+			width: 100%;
 			ul {
 				display: none;
+				flex-direction: column;
+				text-align: center;
+				width: 100%;
 				&.active {
 					display: flex;
+				}
+				a {
+					width: 100%;
 				}
 			}
 		}
