--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,8 @@
 	--yellow-800: #8b6f00;
 	--blue: #0a61ae;
 	--blue-100: #e2f8ff;
-	--blue-100: #61dafb;
-	--blue-100: #0a61ae;
+	--blue-400: #61dafb;
+	--blue-800: #0a61ae;
 }
 
 body {
@@ -53,6 +53,7 @@ header {
 		/* justify-content: center; */
 		font-weight: 600;
 		color: var(--base-800);
+		text-decoration: none;
 		.logo {
 			display: flex;
 			height: 64px;
@@ -127,6 +128,75 @@ header {
 					width: 100%;
 				}
 			}
+		}
+	}
+}
+
+.container {
+	max-width: 1440px;
+	margin: auto;
+	gap: 30px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+
+	@media (max-width: 1440px) {
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+}
+
+.button {
+	display: inline-block;
+	background-color: var(--blue);
+	color: var(--base-100);
+	padding: 10px 30px;
+	border-radius: 10px;
+	transition: ease 0.2s all;
+	&:hover {
+		text-decoration: none;
+		background-color: var(--base-800);
+	}
+	&.white {
+		background-color: white;
+		color: var(--base-800);
+		&:hover {
+			background-color: var(--base-100);
+			color: var(--blue);
+		}
+	}
+	&.black {
+		background-color: black;
+		color: white;
+		&:hover {
+			background-color: var(--base-400);
+			color: var(--base-100);
+		}
+	}
+}
+
+.hero {
+	display: flex;
+	.hero-blue {
+		flex: 1;
+		background-color: var(--blue-100);
+		border-radius: 30px;
+		padding: 30px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+	.hero-yellow {
+		flex: 1;
+		background-color: var(--yellow);
+		border-radius: 30px;
+		padding: 0 30px;
+		display: flex;
+		justify-content: center;
+		align-items: flex-end;
+		img {
+			margin-top: -20px;
+			max-width: 420px;
+			margin-bottom: -10px;
 		}
 	}
 }
