--- a/css/styles.css
+++ b/css/styles.css
@@ -249,3 +249,59 @@ h1 {
 		}
 	}
 }
+
+h2 {
+	font-size: 64px;
+	line-height: 1;
+	color: var(--base-800);
+	padding: 30px;
+	margin-bottom: 10px;
+	text-align: center;
+	small {
+		display: block;
+		font-size: 0.5em;
+		font-weight: 100;
+		color: var(--base);
+	}
+	@media (max-width: 1024px) {
+		font-size: 48px;
+	}
+}
+h3 {
+	font-size: 32px;
+	font-weight: 600;
+	line-height: 1;
+	color: var(--base-800);
+	margin-bottom: 20px;
+}
+.skills {
+	.holder-blue {
+		background-color: var(--blue-100);
+		border-radius: 30px;
+		padding: 30px;
+		margin-bottom: 10px;
+		display: flex;
+		.left-column {
+			flex: 1;
+			ul {
+				list-style-type: none;
+				gap: 10px;
+				margin-right: 100px;
+				margin-bottom: 20px;
+				li {
+					display: inline-block;
+					background-color: var(--blue-400);
+					padding: 10px 20px;
+					border-radius: 15px;
+					margin-bottom: 10px;
+				}
+			}
+		}
+		.right-column {
+			flex: 1;
+		}
+		@media (max-width: 1024px) {
+			flex-direction: column;
+		}
+	}
+}
