add CSS styles to the contact me section

--- a/css/styles.css
+++ b/css/styles.css
@@ -402,6 +402,13 @@ h3 {
 		p {
 			margin-bottom: 30px;
 		}
+		.contact-text {
+			p {
+				text-align: justify;
+				padding: 5px 15px;
+				text-align: justify;
+			}
+		}
 		.contact-links {
 			flex: 3;
 			padding: 30px;
@@ -419,6 +426,68 @@ h3 {
 			flex: 4;
 			background-color: var(--yellow-100);
 			padding: 30px;
+			.form-container {
+				max-width: 700px;
+				margin: 10px auto;
+				background-color: #c5c8c9;
+				padding: 30px 25px 5px 25px;
+				border-radius: 10px;
+				.form {
+					.input {
+						width: 100%;
+						background-color: #e6e9eb;
+						border: none;
+						outline: none;
+						padding: 15px;
+						margin-bottom: 20px;
+						border-radius: 8px;
+						transition: all 0.2s ease-in-out;
+						border-left: 1px solid transparent;
+						&:hover {
+							border-left: 5px solid #000f38;
+						}
+					}
+					.textarea {
+						width: 100%;
+						padding: 10px;
+						border: none;
+						outline: none;
+						background-color: #e6e9eb;
+						color: rgb(17, 9, 1);
+						resize: none;
+						max-height: 300px;
+						height: 250px;
+						overflow-y: scroll;
+						margin-bottom: 20px;
+						border-left: 1px solid transparent;
+						transition: all 0.2s ease-in-out;
+						border-radius: 8px;
+						&:hover {
+							border-left: 5px solid #000f38;
+						}
+					}
+					.button-container {
+						display: block;
+						.send-button {
+							flex: 7;
+							background: rgb(7, 38, 72);
+							color: rgb(253, 253, 253);
+							text-align: center;
+							border: 1px solid transparent;
+							transition: all 0.2s ease-in-out;
+							border-radius: 20px;
+							width: 100%;
+							margin: 10px auto;
+							padding: 8px;
+							&:hover {
+								background-color: transparent;
+								border: 2px solid rgb(7, 38, 72);
+								color: #000711;
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 }
