--- a/css/styles.css
+++ b/css/styles.css
@@ -231,8 +231,8 @@ h1 {
 				text-decoration: none;
 			}
 			img {
-				width: 48px;
-				height: 48px;
+				width: 64px;
+				height: 64px;
 			}
 		}
 	}
@@ -285,6 +285,9 @@ h3 {
 		display: flex;
 		.left-column {
 			flex: 1;
+			p {
+				margin: 20px;
+			}
 			ul {
 				list-style-type: none;
 				gap: 10px;
@@ -402,16 +405,23 @@ h3 {
 		p {
 			margin-bottom: 30px;
 		}
-		.contact-text {
-			p {
-				text-align: justify;
-				padding: 5px 15px;
-				text-align: justify;
-			}
-		}
+
 		.contact-links {
 			flex: 3;
+			display: flex;
+			flex-direction: column;
 			padding: 30px;
+			justify-content: space-between;
+			align-content: space-between;
+			.contact-text {
+				p {
+					text-align: justify;
+					padding: 5px;
+					text-align: justify;
+					font-weight: 500;
+					font-size: larger;
+				}
+			}
 			.social-links {
 				padding: 20px 30px 20px 10px;
 			}
@@ -419,6 +429,7 @@ h3 {
 				a {
 					background-color: var(--base-800);
 					color: var(--base-100);
+					margin: 10px;
 				}
 			}
 		}
@@ -426,6 +437,7 @@ h3 {
 			flex: 4;
 			background-color: var(--yellow-100);
 			padding: 30px;
+			border-radius: 10px;
 			.form-container {
 				max-width: 700px;
 				margin: 10px auto;
