--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,28 @@ h3 {
 		}
 		.right-column {
 			flex: 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			align-content: center;
+			.career {
+				padding: 10px 0;
+				.contents {
+					padding-left: 5px;
+					ul {
+						li {
+							list-style: none;
+							padding: 5px 0;
+							span {
+								color: var(--base-800);
+								font-weight: 600;
+								display: block;
+								padding: 5px 0;
+							}
+						}
+					}
+				}
+			}
 		}
 		@media (max-width: 1024px) {
 			flex-direction: column;
