--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,7 @@ h1 {
 }
 .hero {
 	display: flex;
+	margin-bottom: 30px;
 
 	/* to stack the hero section elements */
 	@media (max-width: 1024px) {
@@ -243,11 +244,12 @@ h1 {
 		padding: 0 30px;
 		display: flex;
 		justify-content: center;
-		align-items: flex-end;
+		align-items: stretch;
+		/* align-content: flex-end; */
 		img {
-			margin-top: -20px;
-			max-width: 420px;
-			margin-bottom: -10px;
+			margin-top: -50px;
+			max-width: 150%;
+			margin-bottom: -3px;
 		}
 	}
 }
@@ -335,7 +337,11 @@ h3 {
 .work-experience {
 	.jobs {
 		display: flex;
-		gap: 30px;
+		justify-content: space-around;
+		align-content: center;
+		gap: 2em;
+		flex-wrap: wrap;
+		/* width: 100%; */
 		@media (max-width: 1024px) {
 			flex-direction: column;
 		}
@@ -343,7 +349,10 @@ h3 {
 			background-color: var(--yellow-100);
 			padding: 30px;
 			border-radius: 30px;
-			flex: 1;
+			width: 450px;
+			@media (max-width: 1024px) {
+				width: 100%;
+			}
 		}
 		h3 {
 			margin-top: 20px;
