--- a/css/styles.css
+++ b/css/styles.css
@@ -325,6 +325,10 @@ h3 {
 								padding: 5px 0;
 							}
 						}
+						.experience-detail {
+							font-size: 0.9rem;
+							padding-left: 10px;
+						}
 					}
 				}
 			}
@@ -562,7 +566,7 @@ h3 {
 						color: rgb(17, 9, 1);
 						resize: none;
 						max-height: 300px;
-						height: 250px;
+						height: 200px;
 						overflow-y: scroll;
 						margin-bottom: 20px;
 						border-left: 1px solid transparent;
