--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ body {
 	font-style: normal;
 	font-size: 20px;
 	/* ToDo: to remove this */
-	margin-bottom: 1000px;
+	/* margin-bottom: 1000px; */
 }
 
 /* ----------------------- header part style ------------------------- */
@@ -47,7 +47,6 @@ header {
 	max-width: 1440px;
 	margin: auto;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-	/* position: fixed; */
 
 	.logo-holder {
 		display: flex;
@@ -77,6 +76,7 @@ header {
 		display: flex;
 		align-items: center;
 		justify-content: center;
+
 		ul {
 			display: flex;
 			list-style-type: none;
@@ -210,6 +210,7 @@ h1 {
 		p {
 			small {
 				display: block;
+				margin-bottom: 5px;
 				font-size: 42px;
 				font-weight: 100;
 				line-height: 1;
@@ -287,20 +288,24 @@ h3 {
 		display: flex;
 		.left-column {
 			flex: 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			align-items: flex-start;
 			p {
-				margin: 20px;
+				margin: -30px 10px 0 10px;
 			}
 			ul {
 				list-style-type: none;
 				gap: 10px;
-				margin-right: 100px;
+				margin-right: 10px;
 				margin-bottom: 20px;
 				li {
 					display: inline-block;
 					background-color: var(--blue-400);
-					padding: 10px 20px;
-					border-radius: 15px;
-					margin-bottom: 10px;
+					padding: 5px 10px;
+					border-radius: 10px;
+					margin-bottom: 8px;
 				}
 			}
 		}
@@ -354,87 +359,12 @@ h3 {
 			padding: 30px;
 			border-radius: 30px;
 			width: 450px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			/* align-content: flex-end;# */
 			@media (max-width: 1024px) {
 				width: 100%;
-			}
-			.project-detail {
-				display: flex;
-				flex-direction: column;
-				justify-content: space-between;
-				align-content: flex-end;
-			}
-			h3 {
-				margin-top: 20px;
-				margin-bottom: 20px;
-			}
-			.teck-stack {
-				h4 {
-					font-size: 22px;
-					margin: 10px 0px;
-				}
-				ul {
-					display: flex;
-					flex-wrap: wrap;
-					list-style-type: none;
-					gap: 5px;
-					margin-right: 5px;
-					margin-bottom: 5px;
-					li {
-						display: inline-block;
-						background-color: var(--blue-400);
-						padding: 8px;
-						border-radius: 15px;
-						margin-bottom: 5px;
-					}
-				}
-			}
-			p {
-				margin-bottom: 10px;
-			}
-			.card_links {
-				/* margin-bottom: -3px; */
-				display: flex;
-				justify-content: space-between;
-				/* align-self: flex-end; */
-				.card_button {
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					padding: 5px 10px;
-					gap: 10px;
-					background-color: var(--blue-800);
-					outline: 3px var(--blue-800) solid;
-					outline-offset: -3px;
-					border-radius: 5px;
-					border: none;
-					cursor: pointer;
-					transition: 400ms;
-					margin-top: 10px;
-					&:hover {
-						background-color: transparent;
-						.link {
-							color: var(--base-800);
-						}
-						path {
-							fill: var(--base-800);
-						}
-					}
-					.svg {
-						width: 27px;
-						height: 4px;
-						transform: translateY(15%);
-						fill: #323232;
-						path {
-							transition: 200ms;
-						}
-					}
-					.link {
-						color: white;
-						font-weight: 700;
-						font-size: 1em;
-						transition: 400ms;
-					}
-				}
 			}
 			figure {
 				width: 100%;
@@ -480,6 +410,85 @@ h3 {
 					}
 					img {
 						scale: 1.1;
+					}
+				}
+			}
+			.project-detail {
+				flex: 1;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				h3 {
+					margin-top: 20px;
+					margin-bottom: 20px;
+				}
+				p {
+					margin-bottom: 10px;
+				}
+				.teck-stack {
+					h4 {
+						font-size: 22px;
+						margin: 10px 0px;
+					}
+					ul {
+						display: flex;
+						flex-wrap: wrap;
+						list-style-type: none;
+						gap: 5px;
+						margin-right: 5px;
+						margin-bottom: 5px;
+						li {
+							display: inline-block;
+							background-color: var(--blue-400);
+							padding: 5px 10px;
+							border-radius: 10px;
+							margin-bottom: 5px;
+						}
+					}
+				}
+
+				.card-links {
+					display: flex;
+					justify-content: space-between;
+					.card_button {
+						display: flex;
+						flex-direction: row;
+						justify-content: center;
+						align-items: center;
+						padding: 5px 10px;
+						gap: 10px;
+						background-color: var(--blue-800);
+						outline: 3px var(--blue-800) solid;
+						outline-offset: -3px;
+						border-radius: 5px;
+						border: none;
+						cursor: pointer;
+						transition: 400ms;
+						margin-top: 10px;
+						&:hover {
+							background-color: transparent;
+							.link {
+								color: var(--base-800);
+							}
+							path {
+								fill: var(--base-800);
+							}
+						}
+						.svg {
+							width: 27px;
+							height: 4px;
+							transform: translateY(15%);
+							fill: #323232;
+							path {
+								transition: 200ms;
+							}
+						}
+						.link {
+							color: white;
+							font-weight: 700;
+							font-size: 1em;
+							transition: 400ms;
+						}
 					}
 				}
 			}
