--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ h3 {
 			justify-content: space-between;
 			align-items: flex-start;
 			p {
-				margin: -30px 10px 0 10px;
+				margin: 10px 10px 10px 10px;
 			}
 			ul {
 				list-style-type: none;
@@ -336,6 +336,12 @@ h3 {
 						}
 					}
 				}
+			}
+			@media (max-width: 1024px) {
+				background-color: var(--yellow);
+				margin: 30px -30px -30px;
+				border-radius: 0 0 30px 30px;
+				padding: 30px;
 			}
 		}
 		@media (max-width: 1024px) {
