--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,10 @@ header {
 		padding-left: 30px;
 		padding-right: 30px;
 	}
+	@media (max-width: 425px) {
+		padding-left: 5px;
+		padding-right: 5px;
+	}
 }
 
 .button {
@@ -480,7 +484,7 @@ h3 {
 						}
 						.svg {
 							width: 24px;
-							/* height: 4px; */
+							height: 4px;
 							transform: translateY(15%);
 							fill: #323232;
 							path {
@@ -534,21 +538,27 @@ h3 {
 				}
 			}
 			.social-links {
-				padding: 20px 30px 20px 10px;
+				margin-bottom: 30px;
+				a {
+					text-decoration: none;
+				}
 			}
 			.call-to-action {
 				a {
 					background-color: var(--base-800);
 					color: var(--base-100);
-					margin: 10px;
+					margin: 10px 5px 5px 0;
 				}
 			}
 		}
 		.contact-form {
 			flex: 4;
 			background-color: var(--yellow-100);
-			padding: 30px;
-			border-radius: 10px;
+			padding: 10px 3px;
+			border-radius: 20px;
+			h3 {
+				text-align: center;
+			}
 			.form-container {
 				max-width: 700px;
 				margin: 10px auto;
