--- a/css/style.production.css
+++ b/css/style.production.css
@@ -29,13 +29,15 @@
 	--blue-800: #0a61ae;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: 'Open Sans', 'Poppins', sans-serif;
 	font-optical-sizing: auto;
 	font-style: normal;
 	font-size: 20px;
-	/* ToDo: to remove this */
-	/* margin-bottom: 1000px; */
 }
 
 /* ----------------------- header part style ------------------------- */
@@ -68,7 +70,6 @@ header {
 		-webkit-box-align: center;
 		-ms-flex-align: center;
 		align-items: center;
-		/* justify-content: center; */
 		font-weight: 600;
 		color: var(--base-800);
 		text-decoration: none;
@@ -192,6 +193,10 @@ header {
 	@media (max-width: 1440px) {
 		padding-left: 30px;
 		padding-right: 30px;
+	}
+	@media (max-width: 425px) {
+		padding-left: 5px;
+		padding-right: 5px;
 	}
 }
 
@@ -319,9 +324,7 @@ h1 {
 		-ms-flex-align: stretch;
 		align-items: stretch;
 		img {
-			margin-top: -50px;
 			max-width: 420px;
-			margin-bottom: -3px;
 		}
 	}
 }
@@ -377,7 +380,7 @@ h3 {
 			-ms-flex-align: start;
 			align-items: flex-start;
 			p {
-				margin: -30px 10px 0 10px;
+				margin: 10px 10px 10px 10px;
 			}
 			ul {
 				list-style-type: none;
@@ -431,6 +434,12 @@ h3 {
 					}
 				}
 			}
+			@media (max-width: 1024px) {
+				background-color: var(--yellow);
+				margin: 30px -30px -30px;
+				border-radius: 0 0 30px 30px;
+				padding: 30px;
+			}
 		}
 		@media (max-width: 1024px) {
 			-webkit-box-orient: vertical;
@@ -452,7 +461,6 @@ h3 {
 		gap: 2em;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		/* width: 100%; */
 		@media (max-width: 1024px) {
 			-webkit-box-orient: vertical;
 			-webkit-box-direction: normal;
@@ -474,7 +482,6 @@ h3 {
 			-webkit-box-pack: justify;
 			-ms-flex-pack: justify;
 			justify-content: space-between;
-			/* align-content: flex-end;# */
 			@media (max-width: 1024px) {
 				width: 100%;
 			}
@@ -586,6 +593,8 @@ h3 {
 					-webkit-box-pack: justify;
 					-ms-flex-pack: justify;
 					justify-content: space-between;
+					-ms-flex-wrap: wrap;
+					flex-wrap: wrap;
 					.card_button {
 						display: -webkit-box;
 						display: -ms-flexbox;
@@ -600,12 +609,12 @@ h3 {
 						-webkit-box-align: center;
 						-ms-flex-align: center;
 						align-items: center;
-						padding: 5px 10px;
-						gap: 10px;
+						padding: 8px;
+						gap: 3px;
 						background-color: var(--blue-800);
 						outline: 3px var(--blue-800) solid;
 						outline-offset: -3px;
-						border-radius: 5px;
+						border-radius: 10px;
 						border: none;
 						cursor: pointer;
 						-webkit-transition: 400ms;
@@ -622,7 +631,7 @@ h3 {
 							}
 						}
 						.svg {
-							width: 27px;
+							width: 24px;
 							height: 4px;
 							-webkit-transform: translateY(15%);
 							-ms-transform: translateY(15%);
@@ -643,6 +652,14 @@ h3 {
 							transition: 400ms;
 						}
 					}
+				}
+				.center-link {
+					display: -webkit-box;
+					display: -ms-flexbox;
+					display: flex;
+					-webkit-box-pack: center;
+					-ms-flex-pack: center;
+					justify-content: center;
 				}
 			}
 		}
@@ -679,10 +696,8 @@ h3 {
 			-webkit-box-direction: normal;
 			-ms-flex-direction: column;
 			flex-direction: column;
-			padding: 30px;
-			-webkit-box-pack: justify;
-			-ms-flex-pack: justify;
-			justify-content: space-between;
+			-ms-flex-pack: distribute;
+			justify-content: space-around;
 			-ms-flex-line-pack: justify;
 			align-content: space-between;
 			.contact-text {
@@ -695,13 +710,16 @@ h3 {
 				}
 			}
 			.social-links {
-				padding: 20px 30px 20px 10px;
+				margin-bottom: 30px;
+				a {
+					text-decoration: none;
+				}
 			}
 			.call-to-action {
 				a {
 					background-color: var(--base-800);
 					color: var(--base-100);
-					margin: 10px;
+					margin: 10px 5px 5px 0;
 				}
 			}
 		}
@@ -710,8 +728,11 @@ h3 {
 			-ms-flex: 4;
 			flex: 4;
 			background-color: var(--yellow-100);
-			padding: 30px;
-			border-radius: 10px;
+			padding: 10px 3px;
+			border-radius: 20px;
+			h3 {
+				text-align: center;
+			}
 			.form-container {
 				max-width: 700px;
 				margin: 10px auto;
