--- a/css/styles.css
+++ b/css/styles.css
@@ -639,7 +639,6 @@ h3 {
 }
 
 .footer {
-	/* background-color: var(--yellow-100); */
 	padding: 30px;
 	display: flex;
 	justify-content: space-between;
@@ -657,8 +656,13 @@ h3 {
 	}
 	.social-links {
 		img {
-			width: 36px;
-			height: 36px;
+			width: 48px;
+			height: 48px;
 		}
 	}
+}
+
+/* impressum page style  */
+.impressum {
+	padding: 30px;
 }
