--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,17 @@ h3 {
 	color: var(--base-800);
 	margin-bottom: 20px;
 }
+.discription-box {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 3px;
+	small {
+		font-size: 1.2rem;
+		font-weight: 900;
+		margin: 10px 10px 20px 0px;
+	}
+}
 .skills {
 	.holder-blue {
 		background-color: var(--blue-100);
@@ -289,6 +300,17 @@ h3 {
 		padding: 30px;
 		margin-bottom: 10px;
 		display: flex;
+		gap: 20px;
+		.skills-header {
+			height: 8rem;
+		}
+
+		@media (max-width: 425px) {
+			.skills-header {
+				height: auto;
+				background-color: aqua;
+			}
+		}
 		.left-column {
 			flex: 1;
 			display: flex;
@@ -296,7 +318,7 @@ h3 {
 			justify-content: space-between;
 			align-items: flex-start;
 			p {
-				margin: 10px 10px 10px 10px;
+				margin: 10px 10px 20px 0px;
 			}
 			ul {
 				list-style-type: none;
@@ -335,7 +357,7 @@ h3 {
 						}
 						.experience-detail {
 							font-size: 0.9rem;
-							padding-left: 10px;
+							padding-bottom: 10px;
 						}
 					}
 				}
