--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 	--base-400: #555;
 	--base-800: #000;
 	--yellow: #ffda4b;
-	--yellow-100: #fffbe6;
+	--yellow-100: #f2ebc5;
 	--yellow-400: #ffda4b;
 	--yellow-800: #8b6f00;
 	--blue: #0a61ae;
