--- a/css/style.production.css
+++ b/css/style.production.css
@@ -52,6 +52,23 @@ p {
 	text-align: justify;
 }
 
+.container {
+	max-width: 1440px;
+	margin: auto;
+	gap: 30px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+
+	@media (max-width: 1440px) {
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+	@media (max-width: 425px) {
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+}
+
 header {
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -183,23 +200,6 @@ header {
 				}
 			}
 		}
-	}
-}
-
-.container {
-	max-width: 1440px;
-	margin: auto;
-	gap: 30px;
-	margin-top: 30px;
-	margin-bottom: 30px;
-
-	@media (max-width: 1440px) {
-		padding-left: 30px;
-		padding-right: 30px;
-	}
-	@media (max-width: 425px) {
-		padding-left: 5px;
-		padding-right: 5px;
 	}
 }
 
@@ -378,13 +378,13 @@ h3 {
 		background-color: var(--blue-100);
 		border-radius: 30px;
 		padding: 30px;
-		margin-bottom: 10px;
+		margin-bottom: 1em;
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
 		gap: 20px;
 		.skills-header {
-			height: 8rem;
+			height: 7em;
 		}
 
 		@media (max-width: 425px) {
@@ -420,9 +420,10 @@ h3 {
 				li {
 					display: inline-block;
 					background-color: var(--blue-400);
-					padding: 5px 10px;
-					border-radius: 10px;
+					padding: 3px 8px;
+					border-radius: 8px;
 					margin-bottom: 8px;
+					font-size: 0.75em;
 				}
 			}
 		}
@@ -481,27 +482,18 @@ h3 {
 }
 .work-experience {
 	.jobs {
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-ms-flex-pack: distribute;
-		justify-content: space-around;
-		-ms-flex-line-pack: center;
-		align-content: center;
+		display: -ms-grid;
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
 		gap: 2em;
-		-ms-flex-wrap: wrap;
-		flex-wrap: wrap;
+
 		@media (max-width: 1024px) {
-			-webkit-box-orient: vertical;
-			-webkit-box-direction: normal;
-			-ms-flex-direction: column;
-			flex-direction: column;
+			grid-auto-flow: columns;
 		}
 		article {
 			background-color: var(--yellow-100);
 			padding: 30px;
 			border-radius: 30px;
-			width: 450px;
 			display: -webkit-box;
 			display: -ms-flexbox;
 			display: flex;
@@ -605,13 +597,20 @@ h3 {
 						list-style-type: none;
 						gap: 5px;
 						margin-right: 5px;
-						margin-bottom: 5px;
+						margin-bottom: 3px;
+						-webkit-box-pack: start;
+						-ms-flex-pack: start;
+						justify-content: start;
+						justify-items: center;
+
 						li {
 							display: inline-block;
 							background-color: var(--blue-400);
-							padding: 5px 10px;
+							padding: 3px 8px;
 							border-radius: 10px;
 							margin-bottom: 5px;
+							text-align: center;
+							font-size: 0.75em;
 						}
 					}
 				}
@@ -625,6 +624,12 @@ h3 {
 					justify-content: space-between;
 					-ms-flex-wrap: wrap;
 					flex-wrap: wrap;
+					@media (max-width: 427px) {
+						-webkit-box-orient: vertical;
+						-webkit-box-direction: normal;
+						-ms-flex-direction: column;
+						flex-direction: column;
+					}
 					.card_button {
 						display: -webkit-box;
 						display: -ms-flexbox;
