--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ header {
 h1 {
 	font-size: 64px;
 	line-height: 1;
-	margin-bottom: 10px;
+	margin: 0 auto 0.5rem auto;
 	small {
 		display: block;
 		font-weight: 100;
@@ -256,7 +256,8 @@ h1 {
 		justify-content: center;
 		align-items: stretch;
 		img {
-			max-width: 420px;
+			max-width: 100%;
+			height: 100%;
 		}
 	}
 }
