--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ header {
 }
 
 h1 {
-	font-size: 64px;
+	font-size: 48px;
 	line-height: 1;
 	margin: 0 auto 0.5rem auto;
 	small {
@@ -195,7 +195,7 @@ h1 {
 	}
 
 	@media (max-width: 1024px) {
-		font-size: 48px;
+		font-size: 36px;
 	}
 }
 .hero {
@@ -219,9 +219,10 @@ h1 {
 			small {
 				display: block;
 				margin-bottom: 5px;
-				font-size: 42px;
+				font-size: 32px;
 				font-weight: 100;
 				line-height: 1;
+				text-align: left;
 			}
 			span {
 				display: block;
@@ -251,13 +252,12 @@ h1 {
 		flex: 1;
 		background-color: var(--yellow);
 		border-radius: 30px;
-		padding: 0 30px;
+		padding: 0 15px;
 		display: flex;
 		justify-content: center;
-		align-items: stretch;
+		align-items: flex-end;
 		img {
-			max-width: 100%;
-			height: 100%;
+			max-width: 425px;
 		}
 	}
 }
