--- a/css/style.production.css
+++ b/css/style.production.css
@@ -235,7 +235,7 @@ header {
 }
 
 h1 {
-	font-size: 64px;
+	font-size: 48px;
 	line-height: 1;
 	margin: 0 auto 0.5rem auto;
 	small {
@@ -244,7 +244,7 @@ h1 {
 	}
 
 	@media (max-width: 1024px) {
-		font-size: 48px;
+		font-size: 36px;
 	}
 }
 .hero {
@@ -282,9 +282,10 @@ h1 {
 			small {
 				display: block;
 				margin-bottom: 5px;
-				font-size: 42px;
+				font-size: 32px;
 				font-weight: 100;
 				line-height: 1;
+				text-align: left;
 			}
 			span {
 				display: block;
@@ -316,19 +317,18 @@ h1 {
 		flex: 1;
 		background-color: var(--yellow);
 		border-radius: 30px;
-		padding: 0 30px;
+		padding: 0 15px;
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
 		-webkit-box-pack: center;
 		-ms-flex-pack: center;
 		justify-content: center;
-		-webkit-box-align: stretch;
-		-ms-flex-align: stretch;
-		align-items: stretch;
+		-webkit-box-align: end;
+		-ms-flex-align: end;
+		align-items: flex-end;
 		img {
-			max-width: 100%;
-			height: 100%;
+			max-width: 425px;
 		}
 	}
 }
