--- a/css/style.production.css
+++ b/css/style.production.css
@@ -31,6 +31,7 @@
 
 html {
 	scroll-behavior: smooth;
+	scroll-padding-top: var(--scroll-padding, 100px);
 }
 
 body {
@@ -70,8 +71,16 @@ p {
 }
 
 header {
-	padding-top: 10px;
-	padding-bottom: 10px;
+	position: sticky;
+	top: 0;
+	overflow: hidden;
+	z-index: 99;
+	background-color: #ffffff;
+	-webkit-transition: 0.4s;
+	-o-transition: 0.4s;
+	transition: 0.4s;
+	padding-top: 1px;
+	padding-bottom: 2px;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
