fix CSS class name typos

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -590,7 +590,7 @@ h3 {
 				p {
 					margin-bottom: 10px;
 				}
-				.teck-stack {
+				.tech-stack {
 					h4 {
 						font-size: 22px;
 						margin: 10px 0px;
