--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ h3 {
 	color: var(--base-800);
 	margin-bottom: 20px;
 }
-.discription-box {
+.description-box {
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -305,19 +305,36 @@ h3 {
 	}
 }
 .skills {
-	.holder-blue {
-		background-color: var(--blue-100);
-		border-radius: 30px;
-		padding: 30px;
-		margin-bottom: 1em;
+	.career_wrapper {
 		display: flex;
-		gap: 20px;
+		gap: 30px;
 
 		@media (max-width: 425px) {
 			.skills-header {
 				height: auto;
 			}
 		}
+		.career-column {
+			flex: 1;
+			border-radius: 30px;
+			padding: 30px;
+			margin-bottom: 10px;
+			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+			text-align: center;
+			background-color: #fbfbfb;
+			&:nth-child(1) {
+				background-color: var(--yellow-100);
+			}
+			&:nth-child(2) {
+				background-color: var(--blue-100);
+			}
+		}
+		@media (max-width: 1024px) {
+			.career-column {
+				width: 100%;
+			}
+		}
+
 		.left-column {
 			flex: 1;
 			display: flex;
@@ -369,12 +386,6 @@ h3 {
 						}
 					}
 				}
-			}
-			@media (max-width: 1024px) {
-				background-color: var(--yellow);
-				margin: 30px -30px -30px;
-				border-radius: 0 0 30px 30px;
-				padding: 30px;
 			}
 		}
 		@media (max-width: 1024px) {
@@ -460,7 +471,7 @@ h3 {
 				p {
 					margin-bottom: 10px;
 				}
-				.teck-stack {
+				.tech-stack {
 					h4 {
 						font-size: 22px;
 						margin: 10px 0px;
